--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "daisyui": "^2.19.0",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
+    "next-global-css": "^1.3.1",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
