--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nanachan-no-toshokan-frontend",
+  "name": "nanachan-no-toshokan",
   "version": "0.1.0",
   "private": true,
   "scripts": {
