--- a/.editorconfig
+++ b/.editorconfig
@@ -19,3 +19,5 @@ ij_javascript_spaces_within_object_literal_braces = true
 ij_typescript_spaces_within_object_literal_braces = true
 ij_javascript_spaces_within_imports = true
 ij_typescript_spaces_within_imports = true
+ij_javascript_use_double_quotes = false
+ij_typescript_use_double_quotes = false
