--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@lexical/react": "^0.3.8",
+    "lexical": "^0.3.8",
     "next": "~12.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
